--- a/public/styles.css
+++ b/public/styles.css
@@ -1,9 +1,17 @@
 
+*::before,
+*::after {
+    margin  : 0;
+    padding : 0;
+
+    box-sizing : border-box;
+}
+
 /* general styles */
 body {
     margin : 20px 40px 20px 40px;
 
-    font-size      : 1.2rem;
+    font-size      : 62.5%; /* 1 rem = 10px */
     letter-spacing : 1px;
     
     background : rgba( 250, 250, 250, 1 );
@@ -13,6 +21,7 @@ h1, h2, h3, h4, ul, li, a, p, input, label, button, div, footer {
     margin  : 0;
     padding : 0;
 
+    font-size   : 1.4rem;
     font-family : 'Quicksand', sans-serif;
     color       : rgba(68, 68, 68, 1);
   }
@@ -34,7 +43,7 @@ a {
 .error {
     margin : 10px 2px 10px 2px;
 
-    font-size   : 0.8em;
+    font-size   : 1.4rem;
     font-weight : bold;
     color       : rgba(255, 0, 153, 1);
 }
@@ -54,14 +63,14 @@ nav ul {
 }
 
 nav li {
-    margin-left : 20px;
+    margin-left : 2.4rem;
 }
 
 nav li a {
     display : block;
     padding : 10px 16px;
 
-    font-size      : 0.8em;
+    font-size      : 1.6rem;
     font-weight    : 700;
     letter-spacing : 2px;
     text-transform : uppercase;
@@ -72,7 +81,7 @@ nav li a {
 form h2 {
     margin-bottom : 40px;
 
-    font-size   : 2.4em;
+    font-size   : 3rem;
     font-weight : 900; 
 }
 
@@ -94,7 +103,7 @@ input {
     border        : 1px solid rgba(221, 221, 221, 1);
     border-radius : 4px;
 
-    font-size : 1em;
+    font-size : 1.4rem;
 }
 
 label {
@@ -110,7 +119,7 @@ button {
     border        : 0;
     border-radius : 36px;
     
-    font-size      : 0.8em;
+    font-size      : 1.4rem;
     font-weight    : 700;
     letter-spacing : 2px;
     text-transform : uppercase;
@@ -131,15 +140,15 @@ button {
 }
 
 .home > .heading > h2 {
-    margin : 0 0 10px 0;
+    margin : 0 0 15px 0;
 
-    font-size : 3em;
+    font-size : 4rem;
 }
 
 .home > .heading > h3 {
-    margin-bottom : 0 0 10px 2px;
+    margin : 0 0 15px 2px;
 
-    font-size : 1.6em;
+    font-size : 1.6rem;
     color     : rgba(153, 153, 153, 1);
 }
 
@@ -148,7 +157,7 @@ button {
     margin  : 20px 0 0 0;
     padding : 12px 18px 12px 18px;
 
-    font-size      : 0.8em;
+    font-size      : 1.2rem;
     font-weight    : bold;
     text-transform : uppercase;
 }
